# 2783

./: CLAUDE.md  CODEX_PLAN_FOR_ITERATOR_AND_FACADE_PATTERNS.md  EXECUTION_GUIDE.md  NEXT_LESSON_BUTTON_PLAN.md  REFACTORING_PLAN.md  REFACTORING_QUICK_REFERENCE.md  UI_Fix_Plan.md
BhashaQuestV3/: .gitignore  AUDIO_AND_FIXES_PLAN.md  AUDIO_FIX_SUMMARY.md  BUILD_FIXES.md  BhashaQuest.pro  BhashaQuestV3.pro  CLAUDE.md  CMakeLists.txt  GEMINI_PLAN.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_SUMMARY.md  ISSUES_FIX.md  Makefile.Debug  Makefile.Release  PLAN.md  PROMPT.md  ProfileViewFix_PLAN.md  README.md  UI_FIX_3x3_PLAN.md  log.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
BhashaQuestV3/Deliverable 2 - Report/: C__Users_hshre_OneDrive_Documents_ClaudeWorkDirectory_2783_BhashaQuestV3_Deliverable 2 - Report_design_rationale.html  TASK_1.1_COMPLETION_SUMMARY.md  class_diagram_d2.puml  design_rationale.md  pre_recording_checklist.md  sequence_diagram_updated.puml  video_script.md
BhashaQuestV3/Deliverable 2 - Report/All Slides/: plan.txt
BhashaQuestV3/debug/: object_script.BhashaQuestV3.Debug
BhashaQuestV3/release/: object_script.BhashaQuestV3.Release
BhashaQuestV3/scripts/: generate_audio.py  requirements.txt
BhashaQuestV3/src/core/controllers/: AppController.cpp  AppController.h
BhashaQuestV3/src/core/data/: ContentRepository.cpp  ContentRepository.h  content.json
BhashaQuestV3/src/core/domain/: AudioManager.cpp  AudioManager.h  CharacterSelectionGrader.cpp  CharacterSelectionGrader.h  CharacterUtils.cpp  CharacterUtils.h  Exercise.cpp  Exercise.h  ExerciseFactory.cpp  ExerciseFactory.h  ExerciseSequence.cpp  ExerciseSequence.h  MCQExercise.cpp  MCQExercise.h  MCQGrader.cpp  MCQGrader.h  Profile.cpp  Profile.h  Result.h  SRSScheduler.cpp  SRSScheduler.h  SkillProgress.cpp  SkillProgress.h  StrategyGrader.cpp  StrategyGrader.h  TileOrderExercise.cpp  TileOrderExercise.h  TileOrderGrader.cpp  TileOrderGrader.h  TranslateExercise.cpp  TranslateExercise.h  TranslateGrader.cpp  TranslateGrader.h
BhashaQuestV3/src/core/facade/: LessonFacade.cpp  LessonFacade.h
BhashaQuestV3/src/ui/: HomeView.cpp  HomeView.h  HomeView.ui  LessonView.cpp  LessonView.h  LessonView.ui  ProfileView.cpp  ProfileView.h  ProfileView.ui
BhashaQuestV3/src/ui/widgets/: CharacterSelectionWidget.cpp  CharacterSelectionWidget.h
deliverable 2 presentation/: AGENTS.md  PRESENTATION_PLAN.md  QUICK_REFERENCE.md
